# Gust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
examples/: basic.rs  batch.rs  event.rs  font.rs  multi_window.rs  shape.rs  texture.rs  threads.rs  view.rs  view_move.rs
gust/: Cargo.toml
gust/src/: color.rs  draw.rs  lib.rs  object.rs  shader.rs  sprite.rs  vertex.rs  window.rs
gust_example/: Cargo.toml
gust_example/src/: main.rs
shr/: shader.frag  shader.vert
src/: circle.rs  color.rs  convert.rs  draw.rs  drawable.rs  event.rs  font.rs  gl_error.rs  gl_utils.rs  help.rs  lib.rs  main.rs  object.rs  rect.rs  resources.rs  shader.rs  shape.rs  shared_window.rs  sprite.rs  spritebatch.rs  text.rs  texture.rs  transform.rs  vector.rs  vertex.rs  vertex_buffer.rs  view.rs  window.rs
