[package]
name = "gust-render"
version = "0.2.0"
authors = ["afourcat <alexandre.fourcat@epitech.eu>"]
description = "Gust is a simple 2D graphical library inspired by SFML."
repository = "https://github.com/Afourcat/Gust/tree/master"
homepage = "https://afourcat.github.io/Gust/"
readme = "README.md"
keywords = ["opengl", "graphic", "gust", "2D", "game"]
categories = ["rendering::engine", "rendering"]
license-file = "LICENSE"
maintenance = { status = "experimental" }
autoexamples = true

[dependencies]
gl = "0.11.0"
nalgebra = "0.16.11"
lazy_static = "1.2.0"
image = "0.20.1"
freetype-rs = "0.19.0"
alga = "0.7.2"
glfw = "0.25.0"
